--- a/src/Components/contact.module.scss
+++ b/src/Components/contact.module.scss
@@ -36,7 +36,7 @@
   }
 }
 
-@media (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .email {
     font-size: 2rem;
   }
