--- a/src/Components/projects.module.scss
+++ b/src/Components/projects.module.scss
@@ -57,7 +57,7 @@ a {
   border-radius: 0 0 0.5rem 0.5rem;
 }
 
-@media (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .container {
     flex-direction: column;
     align-items: center;
@@ -79,7 +79,7 @@ a {
 }
 
 // Tablet
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .container {
     height: 100%;
     flex-direction: column;
